--- a/YL-800N.md
+++ b/YL-800N.md
@@ -110,8 +110,8 @@ In sending order.
 | 1        | Application layer ACK request | - 00: Not using APS protocol<br />- 01: Using APS protocol layer end-to-end<br />Should not use when the application layer has a response from the application device on the opposite end. |
 | 1        | Send radius                   | Max. number of hops for data forwarding. (Default is 7)      |
 | 1        | Discovery routing parameters  | - 0: Disable route discovery<br />- 1: Automatic route discovery<br />- 2: Forced route discovery<br />- 3: Use the source route |
-| 1        | Number of relays N            |                                                              |
-| 2*N      | List of relays                |                                                              |
+| 1        | Number of relays N            | (Exists only if "source route" is used)                      |
+| 2*N      | List of relays                | (Exists only if "source route" is used)                      |
 | 1        | Data length                   |                                                              |
 | Varying  | User data                     |                                                              |
 
